white space fix

--- a/themes/bottlebits/assets/css/style.css
+++ b/themes/bottlebits/assets/css/style.css
@@ -14098,7 +14098,7 @@ img {
 
 /* Popup */
 .popup {
-  height: 100vh;
+  height: 0;
   opacity: 0;
   transition: opacity 400ms cubic-bezier(0.48, 0.04, 0.25, 1);
 }
